@@ -1,280 +1,0 @@
-Source: gutenprint
-Section: graphics
-Priority: optional
-Maintainer: Debian Printing Group <debian-printing@lists.debian.org>
-Uploaders: Roger Leigh <rleigh@debian.org>
-Standards-Version: 3.8.0
-Build-Depends: libcupsys2-dev, libcupsimage2-dev, libgimp2.0-dev, libreadline5-dev, libijs-dev (>= 0.35), debhelper (>= 5.0.0), zlib1g-dev, flex, gettext (>= 0.11.5), foomatic-db-engine (>= 3.0.1), chrpath (>= 0.12), dpatch
-Vcs-Browser: http://git.debian.org/?p=collab-maint/gutenprint.git
-Vcs-Git: git://git.debian.org/git/collab-maint/gutenprint
-
-Package: gimp-gutenprint
-Architecture: any
-Depends: ${shlibs:Depends}, gimp (>= 2.4.0~rc1-1)
-Suggests: gutenprint-doc (>= ${source:Version}), gutenprint-locales (>= ${source:Version})
-Enhances: gimp
-Description: print plugin for the GIMP
- This package includes the Gutenprint Print plugin for the GIMP.
- .
- This is Gutenprint version #UPSTREAM_VERSION#, a stable release
- in the 5.2 series.
- .
- Gutenprint is the print facility for the GIMP, and in addition a
- suite of drivers that may be used with common UNIX spooling systems
- using GhostScript or CUPS.  These drivers provide printing quality
- for UNIX/Linux on a par with proprietary vendor-supplied drivers in
- many cases, and can be used for many of the most demanding printing
- tasks.  Gutenprint was formerly known as Gimp-Print.
-
-Package: cupsys-driver-gutenprint
-Architecture: any
-Section: graphics
-Depends: ${shlibs:Depends}, perl (>= 5.8.0), cupsys (>= 1.2.5) | cups (>= 1.2.5)
-Suggests: gutenprint-doc (>= ${source:Version}), gutenprint-locales (>= ${source:Version})
-Replaces: cupsys-driver-gimpprint, cupsys-driver-gimpprint-data
-Conflicts: cupsys-driver-gimpprint
-Description: printer drivers for CUPS
- This package includes a CUPS driver based on Gutenprint.
- .
- The CUPS drivers contain all of the files needed to support
- photo-quality printing on any printer supported by Gutenprint.  You
- can find out more about the Common UNIX Printing System ("CUPS"), an
- IPP-based printing system for UNIX/Linux, at:
- .
-   http://www.cups.org
- .
- This is Gutenprint version #UPSTREAM_VERSION#, a stable release
- in the 5.2 series.
- .
- Gutenprint is the print facility for the GIMP, and in addition a
- suite of drivers that may be used with common UNIX spooling systems
- using GhostScript or CUPS.  These drivers provide printing quality
- for UNIX/Linux on a par with proprietary vendor-supplied drivers in
- many cases, and can be used for many of the most demanding printing
- tasks.  Gutenprint was formerly known as Gimp-Print.
-
-Package: libgutenprint-dev
-Architecture: any
-Section: libdevel
-Depends: libgutenprint#LIBRARY_VERSION# (= ${binary:Version}), pkg-config (>= 0.14.0)
-Suggests: libgutenprint-doc (= ${source:Version})
-Description: development files for the Gutenprint printer driver library
- This package contains the header files for the Gutenprint library,
- along with a static version of libgutenprint.
- .
- Install this package if you wish to develop programs that use
- libgutenprint.
- .
- This is Gutenprint version #UPSTREAM_VERSION#, a stable release
- in the 5.2 series.
- .
- Gutenprint is the print facility for the GIMP, and in addition a
- suite of drivers that may be used with common UNIX spooling systems
- using GhostScript or CUPS.  These drivers provide printing quality
- for UNIX/Linux on a par with proprietary vendor-supplied drivers in
- many cases, and can be used for many of the most demanding printing
- tasks.  Gutenprint was formerly known as Gimp-Print.
-
-Package: libgutenprint-doc
-Architecture: all
-Section: doc
-Suggests: libgutenprint-dev (= ${binary:Version})
-Description: documentation for the Gutenprint printer driver library
- This package contains lots of info-files, DVI docs and other
- documentation about the Gutenprint library for photo-quality
- printing.
- .
- Install this package if you want to have lots of info about the
- Gutenprint library when you're programming.
- .
- This is Gutenprint version #UPSTREAM_VERSION#, a stable release
- in the 5.2 series.
- .
- Gutenprint is the print facility for the GIMP, and in addition a
- suite of drivers that may be used with common UNIX spooling systems
- using GhostScript or CUPS.  These drivers provide printing quality
- for UNIX/Linux on a par with proprietary vendor-supplied drivers in
- many cases, and can be used for many of the most demanding printing
- tasks.  Gutenprint was formerly known as Gimp-Print.
-
-Package: libgutenprint#LIBRARY_VERSION#
-Architecture: any
-Section: libs
-Depends: ${shlibs:Depends}
-Suggests: gutenprint-locales (>= ${source:Version})
-Description: runtime for the Gutenprint printer driver library
- This package includes the Gutenprint shared library, needed to
- run programs using Gutenprint drivers.
- .
- This is Gutenprint version #UPSTREAM_VERSION#, a stable release
- in the 5.2 series.
- .
- Gutenprint is the print facility for the GIMP, and in addition a
- suite of drivers that may be used with common UNIX spooling systems
- using GhostScript or CUPS.  These drivers provide printing quality
- for UNIX/Linux on a par with proprietary vendor-supplied drivers in
- many cases, and can be used for many of the most demanding printing
- tasks.  Gutenprint was formerly known as Gimp-Print.
-
-Package: libgutenprintui2-dev
-Architecture: any
-Section: libdevel
-Depends: libgutenprintui2-#LIBRARYUI_VERSION# (= ${binary:Version}), pkg-config (>= 0.14.0)
-Suggests: libgutenprint-doc (= ${source:Version})
-Description: development files for the Gutenprint printer driver user interface library
- This package contains the header files for the libgutenprintui
- library, along with a static version of libgutenprintui.
- libgutenprintui contains GTK+ widgets which may be used for print
- dialogs etc. for use with libgutenprint.
- .
- Install this package if you wish to develop packages that use
- libgutenprintui.
- .
- This is Gutenprint version #UPSTREAM_VERSION#, a stable release
- in the 5.2 series.
- .
- Gutenprint is the print facility for the GIMP, and in addition a
- suite of drivers that may be used with common UNIX spooling systems
- using GhostScript or CUPS.  These drivers provide printing quality
- for UNIX/Linux on a par with proprietary vendor-supplied drivers in
- many cases, and can be used for many of the most demanding printing
- tasks.  Gutenprint was formerly known as Gimp-Print.
-
-Package: libgutenprintui2-#LIBRARYUI_VERSION#
-Architecture: any
-Section: libs
-Depends: ${shlibs:Depends}
-Recommends: gutenprint-locales (>= ${source:Version})
-Description: runtime for the Gutenprint printer driver user interface library
- This package includes the libgutenprintui library, necessary to run
- gimp-print.  libgutenprintui contains GTK+ widgets which may be
- used for print dialogs etc. for use with libgutenprint.
- .
- This is Gutenprint version #UPSTREAM_VERSION#, a stable release
- in the 5.2 series.
- .
- Gutenprint is the print facility for the GIMP, and in addition a
- suite of drivers that may be used with common UNIX spooling systems
- using GhostScript or CUPS.  These drivers provide printing quality
- for UNIX/Linux on a par with proprietary vendor-supplied drivers in
- many cases, and can be used for many of the most demanding printing
- tasks.  Gutenprint was formerly known as Gimp-Print.
-
-Package: gutenprint-locales
-Architecture: all
-Section: libs
-Description: locale data files for Gutenprint
- This package contains the i18n files of Gutenprint, used by
- libgutenprint#LIBRARY_VERSION#, cupsys-driver-gutenprint and
- escputil.  It is also used by the GIMP Print plugin.
- .
- They are needed when you want the programs in Gutenprint to print
- their messages in other languages than US English.
- .
- This is Gutenprint version #UPSTREAM_VERSION#, a stable release
- in the 5.2 series.
- .
- Gutenprint is the print facility for the GIMP, and in addition a
- suite of drivers that may be used with common UNIX spooling systems
- using GhostScript or CUPS.  These drivers provide printing quality
- for UNIX/Linux on a par with proprietary vendor-supplied drivers in
- many cases, and can be used for many of the most demanding printing
- tasks.  Gutenprint was formerly known as Gimp-Print.
-
-Package: escputil
-Architecture: any
-Section: utils
-Depends: ${shlibs:Depends}
-Suggests: gutenprint-locales (>= ${source:Version})
-Description: maintenance utility for Epson Stylus printers
- escputil is a utility to clean and align the heads of Epson Stylus
- printers.  It can also check the current ink levels in the printer.
- .
- This is Gutenprint version #UPSTREAM_VERSION#, a stable release
- in the 5.2 series.
-  .
- Gutenprint is the print facility for the GIMP, and in addition a
- suite of drivers that may be used with common UNIX spooling systems
- using GhostScript or CUPS.  These drivers provide printing quality
- for UNIX/Linux on a par with proprietary vendor-supplied drivers in
- many cases, and can be used for many of the most demanding printing
- tasks.  Gutenprint was formerly known as Gimp-Print.
-
-Package: ijsgutenprint
-Architecture: any
-Section: text
-Depends: ${shlibs:Depends}, ghostscript (>= 8.61) | gs-esp (>= 6.53) | gs-gpl (>= 8.01-1) | gs (>= 6.53) | gs-afpl (>= 8.14)
-Replaces: ijsgimpprint
-Conflicts: ijsgimpprint
-Description: inkjet server - Ghostscript driver for Gutenprint
- This package contains the ijsgutenprint binary which provides
- Ghostscript with a Gutenprint driver, including all printers
- supported by Gutenprint.  ijsgutenprint is an IJS server (driver),
- which communicates with Ghostscript (an IJS client) using the IJS
- (InkJet Server) communications protocol.  IJS is a method for
- separating ghostscript drivers from ghostscript, to allow
- ghostscript to be more extensible.
- .
- If you wish to print using Ghostscript and the Gutenprint drivers,
- install this package.  This is typical for LPRng setups.  If you
- are using CUPS, cupsys-driver-gutenprint is a better choice, but
- this package will still work with the appropriate foomatic setup
- if you wish to make use of foomatic.
- .
- This is Gutenprint version #UPSTREAM_VERSION#, a stable release
- in the 5.2 series.
- .
- Gutenprint is the print facility for the GIMP, and in addition a
- suite of drivers that may be used with common UNIX spooling systems
- using GhostScript or CUPS.  These drivers provide printing quality
- for UNIX/Linux on a par with proprietary vendor-supplied drivers in
- many cases, and can be used for many of the most demanding printing
- tasks.  Gutenprint was formerly known as Gimp-Print.
-
-Package: foomatic-db-gutenprint
-Architecture: all
-Section: text
-Depends: foomatic-db, ijsgutenprint (>= ${binary:Version})
-Replaces: foomatic-db-gimp-print
-Conflicts: foomatic-bin (<< 2.9), foomatic-db (<< 2.9), foomatic-db-gimp-print
-Description: OpenPrinting printer support - database for Gutenprint printer drivers
- Foomatic is a printing system designed to make it easier to set up
- common printers for use with Debian (and other operating systems).
- It provides the "glue" between a print spooler (like CUPS or lpr) and
- your actual printer, by telling your computer how to process files
- sent to the printer.
- .
- This package includes support for printers using the Gutenprint
- printer driver suite.
- .
- Home Page: http://www.openprinting.org/
- .
- This is Gutenprint version #UPSTREAM_VERSION#, a stable release
- in the 5.2 series.
- .
- Gutenprint is the print facility for the GIMP, and in addition a
- suite of drivers that may be used with common UNIX spooling systems
- using GhostScript or CUPS.  These drivers provide printing quality
- for UNIX/Linux on a par with proprietary vendor-supplied drivers in
- many cases, and can be used for many of the most demanding printing
- tasks.  Gutenprint was formerly known as Gimp-Print.
-
-Package: gutenprint-doc
-Architecture: all
-Section: doc
-Suggests: cupsys-driver-gutenprint (>= ${binary:Version}), foomatic-db-gutenprint (>= ${source:Version}), gimp-print (>= ${binary:Version}), ijsgutenprint (>= ${binary:Version})
-Description: users' guide for Gutenprint and CUPS
- This package contains a user guide for programs using the
- Gutenprint library for photographic quality printing.  Currently
- this covers using the Print plugin for the GIMP and the Common Unix
- Printing System (CUPS).
- .
- This is Gutenprint version #UPSTREAM_VERSION#, a stable release
- in the 5.2 series.
- .
- Gutenprint is the print facility for the GIMP, and in addition a
- suite of drivers that may be used with common UNIX spooling systems
- using GhostScript or CUPS.  These drivers provide printing quality
- for UNIX/Linux on a par with proprietary vendor-supplied drivers in
- many cases, and can be used for many of the most demanding printing
- tasks.  Gutenprint was formerly known as Gimp-Print.
